Search alignement fix in inner page

--- a/app/assets/stylesheets/catarse_bootstrap/_main.scss
+++ b/app/assets/stylesheets/catarse_bootstrap/_main.scss
@@ -1813,6 +1813,7 @@ p {
   float: none;
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
+  margin-top: 13px;
 }
 .prefix {
   display: inline-block;
